--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-body {
-  background: red; }
+h1:before {
+  content: "ExtraSmall "; }
 
 .container {
   max-width: 95%;
@@ -185,12 +185,12 @@ body {
   padding-left: 0.83333%;
   padding-right: 0.83333%; }
 
-@media (min-width: 768px) and (max-width: 991px) {
-  body {
-    background: blue; }
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  h1:before {
+    content: "Small "; }
 
   .container {
-    max-width: 720px;
+    max-width: 95%;
     margin-left: auto;
     margin-right: auto; }
     .container:after {
@@ -198,101 +198,149 @@ body {
       display: block;
       clear: both; }
 
-  .col-md-1, .col-lg-1 {
-    width: 100%;
+  .col-md-1 {
+    width: 8.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-2, .col-lg-2 {
-    width: 100%;
+  .col-md-2 {
+    width: 16.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-3, .col-lg-3 {
-    width: 100%;
+  .col-md-3 {
+    width: 25%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-4, .col-lg-4 {
-    width: 100%;
+  .col-md-4 {
+    width: 33.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-5, .col-lg-5 {
-    width: 100%;
+  .col-md-5 {
+    width: 41.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-6, .col-lg-6 {
-    width: 100%;
+  .col-md-6 {
+    width: 50%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-7, .col-lg-7 {
-    width: 100%;
+  .col-md-7 {
+    width: 58.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-8, .col-lg-8 {
-    width: 100%;
+  .col-md-8 {
+    width: 66.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-9, .col-lg-9 {
-    width: 100%;
+  .col-md-9 {
+    width: 75%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-10, .col-lg-10 {
-    width: 100%;
+  .col-md-10 {
+    width: 83.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-11, .col-lg-11 {
-    width: 100%;
+  .col-md-11 {
+    width: 91.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
-  .col-md-12, .col-lg-12 {
+  .col-md-12 {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
+
+  .col-lg-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-lg-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
 
   .col-sm-1 {
     width: 8.33333%;
@@ -365,12 +413,12 @@ body {
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
-@media screen and (min-width: 992px) and (max-width: 1199px) {
-  body {
-    background: green; }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  h1:before {
+    content: "Medium "; }
 
   .container {
-    max-width: 960px;
+    max-width: 720px;
     margin-left: auto;
     margin-right: auto; }
     .container:after {
@@ -379,100 +427,76 @@ body {
       clear: both; }
 
   .col-lg-1 {
-    width: 100%;
+    width: 8.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-2 {
-    width: 100%;
+    width: 16.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-3 {
-    width: 100%;
+    width: 25%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-4 {
-    width: 100%;
+    width: 33.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-5 {
-    width: 100%;
+    width: 41.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-6 {
-    width: 100%;
+    width: 50%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-7 {
-    width: 100%;
+    width: 58.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-8 {
-    width: 100%;
+    width: 66.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-9 {
-    width: 100%;
+    width: 75%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-10 {
-    width: 100%;
+    width: 83.33333%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-11 {
-    width: 100%;
+    width: 91.66667%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-lg-12 {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%;
-    overflow: hidden;
-    *zoom: 1; }
+    padding-right: 0.83333%; }
 
   .col-md-1 {
     width: 8.33333%;
@@ -545,9 +569,12 @@ body {
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  h1:before {
+    content: "Large "; }
+
   .container {
-    max-width: 1144px;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto; }
     .container:after {
@@ -555,77 +582,89 @@ body {
       display: block;
       clear: both; }
 
-  .col-md-1 {
+  .col-lg-1 {
     width: 8.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-2 {
+  .col-lg-2 {
     width: 16.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-3 {
+  .col-lg-3 {
     width: 25%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-4 {
+  .col-lg-4 {
     width: 33.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-5 {
+  .col-lg-5 {
     width: 41.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-6 {
+  .col-lg-6 {
     width: 50%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-7 {
+  .col-lg-7 {
     width: 58.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-8 {
+  .col-lg-8 {
     width: 66.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-9 {
+  .col-lg-9 {
     width: 75%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-10 {
+  .col-lg-10 {
     width: 83.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-11 {
+  .col-lg-11 {
     width: 91.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-12 {
+  .col-lg-12 {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
-    padding-right: 0.83333%; }
+    padding-right: 0.83333%; } }
+@media screen and (min-width: 1200px) {
+  h1:before {
+    content: "ExtraLarge "; }
+
+  .container {
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto; }
+    .container:after {
+      content: " ";
+      display: block;
+      clear: both; }
 
   .col-lg-1 {
     width: 8.33333%;
@@ -699,8 +738,9 @@ body {
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
 div[class^=col-] {
-  -moz-box-shadow: inset 0 0 3px 2px #fff, inset 0 0 0 1px #333;
-  -webkit-box-shadow: inset 0 0 3px 2px #fff, inset 0 0 0 1px #333;
-  box-shadow: inset 0 0 3px 2px #fff, inset 0 0 0 1px #333; }
+  -moz-box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
+  -webkit-box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
+  box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
+  padding: 10px; }
 
 /*# sourceMappingURL=style.css.map */
