--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,4 +2,5 @@
 @import susy
 
 div[class^= col-]
-	+box-shadow(inset 0 0 3px 2px #fff, inset 0 0 0 1px #333 )
+	+box-shadow( inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666 )
+	padding: 10px
