--- a/css/style.css
+++ b/css/style.css
@@ -198,145 +198,73 @@ h1:before {
       display: block;
       clear: both; }
 
-  .col-md-1 {
+  .col-xs-1 {
     width: 8.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-2 {
+  .col-xs-2 {
     width: 16.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-3 {
+  .col-xs-3 {
     width: 25%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-4 {
+  .col-xs-4 {
     width: 33.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-5 {
+  .col-xs-5 {
     width: 41.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-6 {
+  .col-xs-6 {
     width: 50%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-7 {
+  .col-xs-7 {
     width: 58.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-8 {
+  .col-xs-8 {
     width: 66.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-9 {
+  .col-xs-9 {
     width: 75%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-10 {
+  .col-xs-10 {
     width: 83.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-11 {
+  .col-xs-11 {
     width: 91.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-md-12 {
-    width: 100%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-1 {
-    width: 8.33333%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-2 {
-    width: 16.66667%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-3 {
-    width: 25%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-4 {
-    width: 33.33333%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-5 {
-    width: 41.66667%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-6 {
-    width: 50%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-7 {
-    width: 58.33333%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-8 {
-    width: 66.66667%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-9 {
-    width: 75%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-10 {
-    width: 83.33333%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-11 {
-    width: 91.66667%;
-    float: left;
-    padding-left: 0.83333%;
-    padding-right: 0.83333%; }
-
-  .col-lg-12 {
+  .col-xs-12 {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
@@ -426,73 +354,145 @@ h1:before {
       display: block;
       clear: both; }
 
-  .col-lg-1 {
+  .col-xs-1 {
     width: 8.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-2 {
+  .col-xs-2 {
     width: 16.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-3 {
+  .col-xs-3 {
     width: 25%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-4 {
+  .col-xs-4 {
     width: 33.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-5 {
+  .col-xs-5 {
     width: 41.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-6 {
+  .col-xs-6 {
     width: 50%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-7 {
+  .col-xs-7 {
     width: 58.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-8 {
+  .col-xs-8 {
     width: 66.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-9 {
+  .col-xs-9 {
     width: 75%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-10 {
+  .col-xs-10 {
     width: 83.33333%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-11 {
+  .col-xs-11 {
     width: 91.66667%;
     float: left;
     padding-left: 0.83333%;
     padding-right: 0.83333%; }
 
-  .col-lg-12 {
+  .col-xs-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-12 {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
@@ -582,6 +582,222 @@ h1:before {
       display: block;
       clear: both; }
 
+  .col-xs-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
   .col-lg-1 {
     width: 8.33333%;
     float: left;
@@ -665,6 +881,222 @@ h1:before {
       content: " ";
       display: block;
       clear: both; }
+
+  .col-xs-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xs-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-sm-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-md-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
 
   .col-lg-1 {
     width: 8.33333%;
