--- a/sass/_susy.sass
+++ b/sass/_susy.sass
@@ -41,7 +41,7 @@ $shorthand: 12 1/4 fluid float inside
 // $ExtraSmall
 // -------------------------------------//
 
-h1
+h1#coltest
 	&:before
 		content: 'ExtraSmall '
 
@@ -62,7 +62,7 @@ h1
 // $Small
 // -------------------------------------//
 @media screen and (min-width: $screen-xs-min) and (max-width: $screen-xs-max)
-	h1
+	h1#coltest
 		&:before
 			content: 'Small '
 	.container
@@ -81,7 +81,7 @@ h1
 // $Medium
 // -------------------------------------//
 @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
-	h1
+	h1#coltest
 		&:before
 			content: 'Medium '
 	.container
@@ -106,7 +106,7 @@ h1
 // $Large
 // -------------------------------------//
 @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
-	h1
+	h1#coltest
 		&:before
 			content: 'Large '
 	.container
@@ -131,7 +131,7 @@ h1
 // $ExtraLarge
 // -------------------------------------//
 @media screen and (min-width: $screen-lg-min)
-	h1
+	h1#coltest
 		&:before
 			content: 'ExtraLarge '
 	.container
