--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-h1#coltest:before {
-  content: "ExtraSmall "; }
-
 .container {
   max-width: 95%;
   margin-left: auto;
@@ -186,9 +183,6 @@ h1#coltest:before {
   padding-right: 0.83333%; }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
-  h1#coltest:before {
-    content: "Small "; }
-
   .container {
     max-width: 95%;
     margin-left: auto;
@@ -342,9 +336,6 @@ h1#coltest:before {
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  h1#coltest:before {
-    content: "Medium "; }
-
   .container {
     max-width: 720px;
     margin-left: auto;
@@ -570,9 +561,6 @@ h1#coltest:before {
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-  h1#coltest:before {
-    content: "Large "; }
-
   .container {
     max-width: 960px;
     margin-left: auto;
@@ -870,9 +858,6 @@ h1#coltest:before {
     padding-left: 0.83333%;
     padding-right: 0.83333%; } }
 @media screen and (min-width: 1200px) {
-  h1#coltest:before {
-    content: "ExtraLarge "; }
-
   .container {
     max-width: 1140px;
     margin-left: auto;
@@ -1168,11 +1153,105 @@ h1#coltest:before {
     width: 100%;
     float: left;
     padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-1 {
+    width: 8.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-2 {
+    width: 16.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-3 {
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-4 {
+    width: 33.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-5 {
+    width: 41.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-6 {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-7 {
+    width: 58.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-8 {
+    width: 66.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-9 {
+    width: 75%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-10 {
+    width: 83.33333%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-11 {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+
+  .col-xl-12 {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
     padding-right: 0.83333%; } }
+* {
+  font-family: Arial, Helvetica, sans-serif; }
+
 div[class^=col-] {
-  -moz-box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
-  -webkit-box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
-  box-shadow: inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666;
+  -moz-box-shadow: inset 0 0 0px 1px #fff, inset 0 0 0px 3px #d5ad0c;
+  -webkit-box-shadow: inset 0 0 0px 1px #fff, inset 0 0 0px 3px #d5ad0c;
+  box-shadow: inset 0 0 0px 1px #fff, inset 0 0 0px 3px #d5ad0c;
+  background: #f1c40f;
+  color: #fff;
+  text-shadow: 1px 0 1px #aa8a0a;
   padding: 10px; }
+
+h2:before {
+  content: "Extra small "; }
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  h2:before {
+    content: "Small "; } }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  h2:before {
+    content: "Medium "; } }
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  h2:before {
+    content: "Large "; } }
+@media screen and (min-width: 1200px) {
+  h2:before {
+    content: "Extra large "; } }
 
 /*# sourceMappingURL=style.css.map */
