--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,40 @@
 @import compass
+@import ../bower_components/susy/sass/susy
 @import susy
 
+$color: #f1c40f
+$text: #fff
+
+*
+	font-family: Arial, Helvetica, sans-serif
+
 div[class^= col-]
-	+box-shadow( inset 0 0 0px 2px #fff, inset 0 0 0px 3px #666 )
+	+box-shadow( inset 0 0 0px 1px #fff, inset 0 0 0px 3px darken($color,6) )
+	background: $color
+	color: $text
+	+text-shadow(1px 0 1px darken($color,15))
 	padding: 10px
+
+h2
+	&:before
+		content: 'Extra small '
+
+@media screen and (min-width: $screen-xs-min) and (max-width: $screen-xs-max)
+	h2
+		&:before
+			content: 'Small '
+
+@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
+	h2
+		&:before
+			content: 'Medium '
+
+@media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
+	h2
+		&:before
+			content: 'Large '
+
+@media screen and (min-width: $screen-lg-min)
+	h2
+		&:before
+			content: 'Extra large '
