Add .pre & .post

--- a/sass/_susy.sass
+++ b/sass/_susy.sass
@@ -47,6 +47,10 @@ $shorthand: 12 1/4 fluid float inside
 		+clearfix
 
 @for $i from 1 through $columns
+	.pre-xs-#{$i}
+		+pre($i of $columns)
+	.post-xs-#{$i}
+		+post($i of $columns)
 	.col-xs-#{$i}
 		+span($i of $columns)
 
@@ -58,10 +62,18 @@ $shorthand: 12 1/4 fluid float inside
 		+container(95%)
 
 	@for $i from 1 through $columns
+		.pre-xs-#{$i}
+			+pre($i of $columns)
+		.post-xs-#{$i}
+			+post($i of $columns)
 		.col-xs-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-sm-#{$i}
+			+pre($i of $columns)
+		.post-sm-#{$i}
+			+post($i of $columns)
 		.col-sm-#{$i}
 			+span($i of $columns)
 
@@ -74,14 +86,26 @@ $shorthand: 12 1/4 fluid float inside
 		+container(720px)
 
 	@for $i from 1 through $columns
+		.pre-xs-#{$i}
+			+pre($i of $columns)
+		.post-xs-#{$i}
+			+post($i of $columns)
 		.col-xs-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-sm-#{$i}
+			+pre($i of $columns)
+		.post-sm-#{$i}
+			+post($i of $columns)
 		.col-sm-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-md-#{$i}
+			+pre($i of $columns)
+		.post-md-#{$i}
+			+post($i of $columns)
 		.col-md-#{$i}
 			+span($i of $columns)
 
@@ -96,18 +120,34 @@ $shorthand: 12 1/4 fluid float inside
 		+container(960px)
 
 	@for $i from 1 through $columns
+		.pre-xs-#{$i}
+			+pre($i of $columns)
+		.post-xs-#{$i}
+			+post($i of $columns)
 		.col-xs-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-sm-#{$i}
+			+pre($i of $columns)
+		.post-sm-#{$i}
+			+post($i of $columns)
 		.col-sm-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-md-#{$i}
+			+pre($i of $columns)
+		.post-md-#{$i}
+			+post($i of $columns)
 		.col-md-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-lg-#{$i}
+			+pre($i of $columns)
+		.post-lg-#{$i}
+			+post($i of $columns)
 		.col-lg-#{$i}
 			+span($i of $columns)
 
@@ -118,21 +158,41 @@ $shorthand: 12 1/4 fluid float inside
 		+container(1140px)
 
 	@for $i from 1 through $columns
+		.pre-xs-#{$i}
+			+pre($i of $columns)
+		.post-xs-#{$i}
+			+post($i of $columns)
 		.col-xs-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-sm-#{$i}
+			+pre($i of $columns)
+		.post-sm-#{$i}
+			+post($i of $columns)
 		.col-sm-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-md-#{$i}
+			+pre($i of $columns)
+		.post-md-#{$i}
+			+post($i of $columns)
 		.col-md-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-lg-#{$i}
+			+pre($i of $columns)
+		.post-lg-#{$i}
+			+post($i of $columns)
 		.col-lg-#{$i}
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pre-xl-#{$i}
+			+pre($i of $columns)
+		.post-xl-#{$i}
+			+post($i of $columns)
 		.col-xl-#{$i}
 			+span($i of $columns)
