Add .pull class

--- a/sass/_susy.sass
+++ b/sass/_susy.sass
@@ -47,6 +47,8 @@ $shorthand: 12 1/4 fluid float inside
 		+clearfix
 
 @for $i from 1 through $columns
+	.pull-xs-#{$i}
+		+pull($i of $columns)
 	.pre-xs-#{$i}
 		+pre($i of $columns)
 	.post-xs-#{$i}
@@ -62,6 +64,8 @@ $shorthand: 12 1/4 fluid float inside
 		+container(95%)
 
 	@for $i from 1 through $columns
+		.pull-xs-#{$i}
+			+pull($i of $columns)
 		.pre-xs-#{$i}
 			+pre($i of $columns)
 		.post-xs-#{$i}
@@ -86,6 +90,8 @@ $shorthand: 12 1/4 fluid float inside
 		+container(720px)
 
 	@for $i from 1 through $columns
+		.pull-xs-#{$i}
+			+pull($i of $columns)
 		.pre-xs-#{$i}
 			+pre($i of $columns)
 		.post-xs-#{$i}
@@ -94,6 +100,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-sm-#{$i}
+			+pull($i of $columns)
 		.pre-sm-#{$i}
 			+pre($i of $columns)
 		.post-sm-#{$i}
@@ -102,6 +110,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-md-#{$i}
+			+pull($i of $columns)
 		.pre-md-#{$i}
 			+pre($i of $columns)
 		.post-md-#{$i}
@@ -120,6 +130,8 @@ $shorthand: 12 1/4 fluid float inside
 		+container(960px)
 
 	@for $i from 1 through $columns
+		.pull-xs-#{$i}
+			+pull($i of $columns)
 		.pre-xs-#{$i}
 			+pre($i of $columns)
 		.post-xs-#{$i}
@@ -128,6 +140,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-sm-#{$i}
+			+pull($i of $columns)
 		.pre-sm-#{$i}
 			+pre($i of $columns)
 		.post-sm-#{$i}
@@ -136,6 +150,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-md-#{$i}
+			+pull($i of $columns)
 		.pre-md-#{$i}
 			+pre($i of $columns)
 		.post-md-#{$i}
@@ -144,6 +160,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-lg-#{$i}
+			+pull($i of $columns)
 		.pre-lg-#{$i}
 			+pre($i of $columns)
 		.post-lg-#{$i}
@@ -158,6 +176,8 @@ $shorthand: 12 1/4 fluid float inside
 		+container(1140px)
 
 	@for $i from 1 through $columns
+		.pull-xs-#{$i}
+			+pull($i of $columns)
 		.pre-xs-#{$i}
 			+pre($i of $columns)
 		.post-xs-#{$i}
@@ -166,6 +186,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-sm-#{$i}
+			+pull($i of $columns)
 		.pre-sm-#{$i}
 			+pre($i of $columns)
 		.post-sm-#{$i}
@@ -174,6 +196,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-md-#{$i}
+			+pull($i of $columns)
 		.pre-md-#{$i}
 			+pre($i of $columns)
 		.post-md-#{$i}
@@ -182,6 +206,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-lg-#{$i}
+			+pull($i of $columns)
 		.pre-lg-#{$i}
 			+pre($i of $columns)
 		.post-lg-#{$i}
@@ -190,6 +216,8 @@ $shorthand: 12 1/4 fluid float inside
 			+span($i of $columns)
 
 	@for $i from 1 through $columns
+		.pull-xl-#{$i}
+			+pull($i of $columns)
 		.pre-xl-#{$i}
 			+pre($i of $columns)
 		.post-xl-#{$i}
