--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,7 +13,12 @@ div[class^= col-]
 	background: $color
 	color: $text
 	+text-shadow(1px 0 1px darken($color,15))
+
+span
+	display: block
 	padding: 10px
+	border-left: 1px solid #fff
+	border-right: 1px solid #fff
 
 h2
 	&:before
