--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,24 +22,24 @@ span
 
 h2
 	&:before
-		content: 'Extra small '
+		content: '>480px '
 
 @media screen and (min-width: $screen-xs-min) and (max-width: $screen-xs-max)
 	h2
 		&:before
-			content: 'Small '
+			content: '>768px 481px< '
 
 @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
 	h2
 		&:before
-			content: 'Medium '
+			content: '>960px 769px< '
 
 @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
 	h2
 		&:before
-			content: 'Large '
+			content: '>1200px 961px< '
 
 @media screen and (min-width: $screen-lg-min)
 	h2
 		&:before
-			content: 'Extra large '
+			content: '<1200px '
